# stepping

./: .gitignore  README.md  docs-md  ideas.md  licence.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  transitive-walkthrough.md
docs/: Dockerfile  fly.toml  log.txt
docs/doks/assets/scss/common/: _global.scss  (+1 more)
docs/doks/config/_default/: config.toml  params.toml
docs/doks/layouts/: index.html
docs/doks/layouts/docs/: single.html
docs/snippets/: conftest.py  test_how_it_works.py  test_meter_reads.py  test_setup.py  test_storing_state.py  test_typechecker.py  test_writing_queries.py
scripts/: log.txt  md  md.py  md_api.py  type_gen.py
src/stepping/: __init__.py  config.py  graph.py  profile.py  run.py  serialize.py  steppingpack.py  store.py  types.py  types_helpers.py
src/stepping/datatypes/: _btree.py  default_dict.py  sorted_set.py
src/stepping/operators/: __init__.py  group.py  incremental.py  lifted.py  linear.py  transform.py
src/stepping/operators/builder/: __init__.py  ast.py  common.py  compile.py  traverse.py
src/stepping/zset/: __init__.py  functions.py  postgres.py  python.py
src/stepping/zset/sql/: generic.py  postgres.py  sqlite.py
tests/: _graph_types.py  conftest.py  helpers.py  test_builder.py  test_datatypes.py  test_graph.py  test_postgres.py  test_profile.py  test_profile_cute.py  test_run.py  test_run_postgres.py  test_serialize.py  test_sqlite.py  test_steppingpack.py  test_transform.py  test_types.py  test_zset.py
tests/run/: test_basic.py  test_further.py  test_profile.py  test_recursive.py
(+34 files in other folders)
